--- a/Inhalt/Einfuehrungsphase.tex
+++ b/Inhalt/Einfuehrungsphase.tex
@@ -2,8 +2,6 @@
 \section{Einführungsphase}
 \label{sec:Einfuehrungsphase}
 
-\begin{itemize}
-	\item Welche Schritte waren zum Deployment der Anwendung nötig und wie wurden sie durchgeführt (automatisiert/manuell)?
-	\item Wurden \ggfs Altdaten migriert und wenn ja, wie?
-	\item Wurden Benutzerschulungen durchgeführt und wenn ja, Wie wurden sie vorbereitet?
-\end{itemize}
+Trotz Verweigerung der Abnahme konnte dennoch eine erste Einführung stattfinden. Dafür wurden die Entwickler der Web-Unit zu einem gemeinsamen Termin eingeladen. Im ersten Schritt wurde das Projekt den Entwicklern vorgestellt und die Motivation des Projektes erläutert. Im nächsten Schritt wurden kurz wichtige Bereiche des Quellcodes und vorgestellt und die grundlegende Funktionsweise erklärt. Außerdem wurde an einem Beispiel gezeigt, wie eine Konfiguration aussehen könnte. Im folgenden konnten die Entwickler das Tool lokal in einer Testumgebung selbst ausprobieren. 
+
+Das Feedback der Entwickler war im Anbetracht der bisherigen Lösungen durchweg positiv und es gab gute konstruktive Kritik. In den Produktiveinsatz wird das Projekt aufgrund der bestehenden Mängel aktuell noch nicht gehen. Sobald diese behoben wurden, steht dem aber nichts mehr im Wege.
